app/assets/stylesheets/application.css.scss
// box-sizing ftw
*, *:before, *:after {
  box-sizing: border-box;
}

// Normalize
@import 'bower_components/normalize-css/normalize';

// Grid #1
@import 'bower_components/skeleton/stylesheets/base--modified';
@import 'bower_components/skeleton/stylesheets/skeleton';
@import 'bower_components/skeleton/stylesheets/layout';

// Grid #2
@import 'bower_components/gridism/gridism';

// Includes
// @import 'colors/colors';
@import 'include-color';
@import 'include-media';

// Base
@import 'base-entypo';
@import 'base-type';
@import 'base-list';

// Modules
@import 'module-blog';
@import 'module-buttons';
@import 'module-cart';
@import 'module-color.picker';
@import 'module-form';
@import 'module-hero';
@import 'module-jquery.impromptu';
@import 'module-jquery.tabs';
@import 'module-nav';
@import 'module-nojs';
@import 'module-order.form';
@import 'module-private';
@import 'module-slideshow';
@import 'module-store';
@import 'module-testimonials';
@import 'module-video';

// Layouts
@import 'layout-pub';
@import 'layout-footer';
@import 'layout-humans';

// Pages
@import 'glob-homes';
@import 'glob-page';



// Override the base style set by Skeleton
a, a:visited {
    color: $hotpink;
    text-decoration: none;
}
a:hover, a:focus {
    color: $hotpink;
}
// End override


img.center-in-grid {
    display: block;
    margin: 0 auto; }


.nice-list {
    list-style-type: square;
    margin-left: 14px;
    margin-top: 15px;
    li {
        margin-bottom: 4px;
    }
}



select.ng-invalid.ng-dirty,
input.ng-invalid {
  border: 1px solid red;
}




.input--dirty {
    border: 1px solid red;
}

.browsehappy {
    margin: 0;
    text-align: center;
    background-color: #ff3;
    padding: 20px 0 25px;
    line-height: 1;
}

